src/test/resources/de/uni_luebeck/isp/tessla/core/errors/hof-arity-mismatch2.tessla
def f(a: Int) = a
def foo(g: (Int, Int) => Int) = g(1, 2)
out foo(f)
